Fix the spacing and header option

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -75,6 +75,7 @@ a.link-figure-title {
 }
 .link-figure-author {
   float: right;
+  margin-bottom: 0.5em;
 }
 /* link-figure END */
 
